generalized for > 3 filters; fixed RGB color order

--- a/NIRCam Trilogy color images.ipynb
+++ b/NIRCam Trilogy color images.ipynb
@@ -4,12 +4,12 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "# CEERS NIRCam Trilogy color images\n",
+    "# Trilogy color images\n",
     "\n",
-    "[CEERS SDR3](https://ceers.github.io/sdr3.html) Simulated Data Release 3 NIRCam images in 6 filters  \n",
+    "[CEERS SDR3](https://ceers.github.io/sdr3.html) Simulated Data Release 3 NIRCam images in 6 filters:  \n",
     "https://ceers.github.io/sdr3.html\n",
     "\n",
-    "[Trilogy](https://www.stsci.edu/~dcoe/trilogy) adapted for use in a Python 3 Jupyter notebook"
+    "[Trilogy](https://www.stsci.edu/~dcoe/trilogy/Intro.html) adapted for use in a Python 3 Jupyter notebook"
    ]
   },
   {
@@ -26,7 +26,7 @@
     "from os.path import expanduser\n",
     "home = expanduser(\"~\")\n",
     "\n",
-    "import astropy\n",
+    "import astropy  # version 4.2 is required to write magnitudes to ecsv file\n",
     "import astropy.io.fits as pyfits\n",
     "from astropy.io import fits\n",
     "import astropy.wcs as wcs\n",
@@ -37,9 +37,7 @@
     "from astropy.coordinates import SkyCoord\n",
     "from astropy.stats import sigma_clipped_stats\n",
     "\n",
-    "from importlib import reload\n",
-    "\n",
-    "from scipy.optimize import golden  # for Trilogy"
+    "from importlib import reload"
    ]
   },
   {
@@ -66,8 +64,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "# Trilogy color images\n",
-    "# https://www.stsci.edu/~dcoe/trilogy\n",
+    "# Trilogy\n",
     "\n",
     "from scipy.optimize import golden\n",
     "\n",
@@ -159,9 +156,13 @@
     "        levels = x0, x1, x2\n",
     "    return levels\n",
     "\n",
-    "def image_stamps(data, sample_size=1000, dx=0, dy=0):\n",
-    "    ny, nx, three = data.shape\n",
-    "    #print(data.shape)\n",
+    "def stamp_extent(data, sample_size=1000, dx=0, dy=0):\n",
+    "    data_shape = data.shape\n",
+    "    if len(data_shape) == 2:\n",
+    "        ny, nx = data.shape\n",
+    "    else:\n",
+    "        ny, nx, three = data.shape\n",
+    "    \n",
     "    yc = int(ny / 2)\n",
     "    xc = int(nx / 2)\n",
     "    #print(xc, yc)\n",
@@ -179,39 +180,14 @@
     "    xlo = int(np.clip(xlo, 0, nx))\n",
     "    xhi = int(np.clip(xhi, 0, nx))\n",
     "    #print(xlo, xhi, ylo, yhi)\n",
+    "    return xlo, xhi, ylo, yhi\n",
     "\n",
+    "def image_stamps(data, sample_size=1000, dx=0, dy=0):\n",
+    "    xlo, xhi, ylo, yhi = stamp_extent(data, sample_size, dx, dy)\n",
     "    stamps = data[ylo:yhi,xlo:xhi]\n",
-    "    return stamps"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
-    "# View images in each filter (optional)"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "field = 'ceers5'\n",
-    "filters = 'F115W F150W F200W F277W F356W F444W'.split()\n",
-    "image_files = ['../images/%s_%s_sci.fits.gz' % (field, filt.lower()) for filt in filters]\n",
-    "idata = 1  # index where science data is\n",
+    "    return stamps\n",
     "\n",
-    "fig, ax = plt.subplots(2, 3, figsize=(9.5,4), sharex=True, sharey=True)\n",
-    "\n",
-    "for i, filt in enumerate(filters):\n",
-    "    iy = i // 3\n",
-    "    ix = i % 3\n",
-    "    hdu = pyfits.open(image_files[i])\n",
-    "    data = hdu[idata].data\n",
-    "    norm = simple_norm(data, 'sqrt', min_percent=0.1, max_percent=99.9)\n",
-    "    ax[iy,ix].imshow(data, origin='lower', interpolation='none', norm=norm, cmap='Greys_r')\n",
-    "    ax[iy,ix].set_title(filt)"
+    "image_stamp = image_stamps"
    ]
   },
   {
@@ -227,20 +203,26 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "# Set filters, target name, and file name format\n",
+    "#image_files_list = glob('../images/*.fits')\n",
+    "#image_files_list = list(np.sort(image_files_list))\n",
     "\n",
-    "#filters = 'F115W F200W F444W'.split(); out_ext = ''\n",
-    "#filters = 'F277W F356W F444W'.split(); out_ext = 'lw'\n",
-    "#filters = 'F115W F150W F200W'.split(); out_ext = 'sw'\n",
-    "# these CEERS filters include greatest out of field coverage to support NIRCam WFSS\n",
-    "filters = 'F115W F200W F356W'.split(); out_ext = '' \n",
     "field = 'ceers5'  # insert target name here\n",
+    "filters = 'F115W F150W F200W F277W F356W F444W'.split()\n",
+    "image_files_list = ['../images/%s_%s_sci.fits.gz' % (field, filt.lower()) for filt in filters]\n",
     "\n",
-    "image_files = ['../images/%s_%s_sci.fits.gz' % (field, filt.lower()) for filt in filters]\n",
-    "idata = 1  # index where science data is\n",
-    "\n",
-    "num_images = len(image_files)\n",
-    "image_files"
+    "image_files_dict = {}\n",
+    "for i, filt in enumerate(filters):\n",
+    "    image_files_dict[filt] = image_files_list[i]\n",
+    "    print(filt, image_files_dict[filt])\n",
+    "    \n",
+    "idata = 1  # index where science data is"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "# View images (optional)"
    ]
   },
   {
@@ -249,74 +231,16 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "for i in range(num_images):\n",
-    "    hdu = pyfits.open(image_files[i])\n",
+    "fig, ax = plt.subplots(2, 3, figsize=(9.5,6), sharex=True, sharey=True)\n",
+    "\n",
+    "for i, filt in enumerate(filters):\n",
+    "    iy = i // 3\n",
+    "    ix = i % 3\n",
+    "    hdu = pyfits.open(image_files_list[i])\n",
     "    data = hdu[idata].data\n",
-    "    ny, nx = data.shape\n",
-    "    imwcs = wcs.WCS(hdu[idata].header, hdu)\n",
-    "    # image_pixel_scale = np.abs(hdu[0].header['CD1_1']) * 3600\n",
-    "    image_pixel_scale = wcs.utils.proj_plane_pixel_scales(imwcs)[0] \n",
-    "    image_pixel_scale *= imwcs.wcs.cunit[0].to('arcsec')\n",
-    "    outline = '%d x %d pixels' % (ny, nx)\n",
-    "    outline += ' = %d\" x %d\"' % (ny * image_pixel_scale, nx * image_pixel_scale)\n",
-    "    outline += \" = %.1f' x %.1f'\" % (ny * image_pixel_scale / 60., nx * image_pixel_scale / 60.)\n",
-    "    outline += ' (%.2f\" / pixel)' % image_pixel_scale\n",
-    "    print(outline)"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "r = fits.open(image_files[2])[idata].data\n",
-    "g = fits.open(image_files[1])[idata].data\n",
-    "b = fits.open(image_files[0])[idata].data\n",
-    "\n",
-    "rgb_data = np.array([r, g, b]).transpose((1,2,0))  # (3, ny, nx) -> (ny, nx, 3)\n",
-    "rgb_data.shape"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "if 0:\n",
-    "    # Lupton color image\n",
-    "    color_image = make_lupton_rgb(r, g, b, Q=10, stretch=0.07)  # , minimum=(0.25, 0.11, 0.12))\n",
-    "    fig, ax = plt.subplots(1, 1, figsize=(9.5, 6))\n",
-    "    # For RA,Dec axes instead of pixels, add: , subplot_kw={'projection': imwcs})\n",
-    "    plt.imshow(color_image, origin='lower')\n",
-    "    #plt.xlabel('Right Ascension')\n",
-    "    #plt.ylabel('Declination')\n",
-    "    #plt.title('Short Wavelength Channel')"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "if 0:\n",
-    "    # Show each image as grayscale\n",
-    "\n",
-    "    fig, ax = plt.subplots(1, num_images, sharex=True, sharey=True, figsize=(9.5, 3))\n",
-    "    # For RA,Dec axes instead of pixels, add: , subplot_kw={'projection': imwcs})\n",
-    "\n",
-    "    norm_images = ImageNormalize(stretch=SqrtStretch(), vmin=0, vmax=1)\n",
-    "\n",
-    "    for i in range(num_images):\n",
-    "        data = pyfits.open(image_files[i])[idata].data\n",
-    "        ax[i].imshow(data, origin='lower', cmap='Greys_r', norm=norm_images)\n",
-    "        ax[i].set_title(filters[i])\n",
-    "\n",
-    "    fig.tight_layout()\n",
-    "\n",
-    "    print('Interactive zoom / pan controls all images simultaneously')"
+    "    norm = simple_norm(data, 'sqrt', min_percent=0.1, max_percent=99.9)\n",
+    "    ax[iy,ix].imshow(data, origin='lower', interpolation='none', norm=norm, cmap='Greys_r')\n",
+    "    ax[iy,ix].set_title(filt)"
    ]
   },
   {
@@ -334,19 +258,21 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "rgb_stamps = image_stamps(rgb_data, sample_size=1000, dx=-1800, dy=1000)\n",
-    "rgb_stamps.shape"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
+    "# Input parameters\n",
+    "\n",
+    "#noiselum = 0.25\n",
+    "#satpercent = 0.03\n",
     "noiselum = 0.10\n",
     "satpercent = 0.01\n",
-    "unsatpercent = 1 - 0.01 * satpercent"
+    "unsatpercent = 1 - 0.01 * satpercent\n",
+    "\n",
+    "sample_size = 1000\n",
+    "dx = -2500\n",
+    "dy =  1000\n",
+    "\n",
+    "noisesig = 1\n",
+    "correctbias = True\n",
+    "noisesig0 = 2"
    ]
   },
   {
@@ -355,18 +281,24 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "scaled_images = []\n",
-    "levels_rgb = []\n",
-    "for i in range(3):\n",
-    "    levels = determine_scaling(rgb_stamps[:,:,i].ravel(), unsatpercent)\n",
-    "    levels_rgb.append(levels)\n",
-    "    print(levels)\n",
-    "    print()\n",
-    "    scaled = imscale2(rgb_stamps[:,:,i], levels, noiselum)\n",
-    "    scaled_images.append(scaled)\n",
-    "    \n",
-    "imrgb = np.array(scaled_images[::-1]).transpose((1,2,0))\n",
-    "imrgb.shape"
+    "nrows = 2\n",
+    "ncolumns = int(len(filters) / nrows)\n",
+    "fig, ax = plt.subplots(nrows, ncolumns, figsize=(9.5,8), sharex=True, sharey=True)\n",
+    "\n",
+    "scaled_images = {}\n",
+    "levels_all = {}\n",
+    "my_stamp_extent = stamp_extent(data, sample_size, dx, dy)\n",
+    "for i, filt in enumerate(filters):\n",
+    "    data = fits.open(image_files_list[i])[idata].data\n",
+    "    stamp = image_stamp(data, sample_size, dx, dy)\n",
+    "    levels = determine_scaling(stamp.ravel(), unsatpercent, noisesig, correctbias, noisesig0)\n",
+    "    scaled = imscale2(stamp, levels, noiselum)\n",
+    "    levels_all[filt] = levels\n",
+    "    scaled_images[filt] = scaled\n",
+    "    ix = i % ncolumns\n",
+    "    iy = int(i / ncolumns)\n",
+    "    ax[iy,ix].imshow(scaled, origin='lower', interpolation='none', cmap='Greys_r', extent=my_stamp_extent)\n",
+    "    ax[iy,ix].set_title(filt)"
    ]
   },
   {
@@ -375,8 +307,47 @@
    "metadata": {},
    "outputs": [],
    "source": [
+    "# Color image with 3 filters\n",
+    "\n",
+    "b = scaled_images['F115W']\n",
+    "g = scaled_images['F200W']\n",
+    "r = scaled_images['F444W']\n",
+    "\n",
+    "imrgb = np.array([r, g, b]).transpose((1,2,0)).astype(np.uint8)\n",
     "fig, ax = plt.subplots(1, 1, figsize=(9.5, 6))\n",
-    "plt.imshow(imrgb, origin='lower')"
+    "plt.imshow(imrgb, origin='lower', extent=my_stamp_extent) # (xlo,xhi,ylo,yhi))\n",
+    "#matplotlib.image.imsave('stamp3.png', imrgb)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# Let's try a more complicated combination\n",
+    "\n",
+    "b = scaled_images['F115W'] * (1/4.) + scaled_images['F150W'] * (2/4.) + scaled_images['F200W'] * (1/4.)\n",
+    "g = scaled_images['F150W'] * (1/4.) + scaled_images['F200W'] * (2/4.) + scaled_images['F277W'] * (1/4.)\n",
+    "r = scaled_images['F277W'] * (1/4.) + scaled_images['F356W'] * (2/4.) + scaled_images['F444W'] * (1/4.) \n",
+    "\n",
+    "imrgb = np.array([r, g, b]).transpose((1,2,0)).astype(np.uint8)\n",
+    "fig, ax = plt.subplots(1, 1, figsize=(9.5, 6))\n",
+    "plt.imshow(imrgb, origin='lower', extent=my_stamp_extent) # (xlo,xhi,ylo,yhi))\n",
+    "matplotlib.image.imsave('stamp6.png', imrgb)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "if 0:\n",
+    "    # Lupton color image\n",
+    "    color_image = make_lupton_rgb(r, g, b, Q=10, stretch=0.07)  # , minimum=(0.25, 0.11, 0.12))\n",
+    "    fig, ax = plt.subplots(1, 1, figsize=(9.5, 6))\n",
+    "    plt.imshow(color_image, origin='lower')"
    ]
   },
   {
@@ -393,14 +364,13 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "scaled_images = []\n",
-    "for i in range(3):\n",
-    "    levels = levels_rgb[i]\n",
-    "    scaled = imscale2(rgb_data[:,:,i], levels, noiselum)\n",
-    "    scaled_images.append(scaled)\n",
-    "    \n",
-    "imrgb = np.array(scaled_images[::-1]).transpose((1,2,0))\n",
-    "imrgb.shape"
+    "scaled_images = {}\n",
+    "for i, filt in enumerate(filters):\n",
+    "    levels = levels_all[filt]\n",
+    "    print(filt, levels)\n",
+    "    data = fits.open(image_files_list[i])[idata].data\n",
+    "    scaled = imscale2(data, levels, noiselum)\n",
+    "    scaled_images[filt] = scaled"
    ]
   },
   {
@@ -409,8 +379,21 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "import matplotlib\n",
+    "b = scaled_images['F115W'] * (1/4.) + scaled_images['F150W'] * (2/4.) + scaled_images['F200W'] * (1/4.)\n",
+    "g = scaled_images['F150W'] * (1/4.) + scaled_images['F200W'] * (2/4.) + scaled_images['F277W'] * (1/4.)\n",
+    "r = scaled_images['F277W'] * (1/4.) + scaled_images['F356W'] * (2/4.) + scaled_images['F444W'] * (1/4.) \n",
+    "\n",
+    "imrgb = np.array([r, g, b]).transpose((1,2,0)).astype(np.uint8)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
     "outfile = field + '_color.png'\n",
+    "out_ext = ''\n",
     "if out_ext:\n",
     "    outfile = outfile.replace('.png', '_'+out_ext+'.png')\n",
     "    \n",
@@ -419,21 +402,6 @@
     "else:\n",
     "    print('SAVING', outfile)\n",
     "    matplotlib.image.imsave(outfile, imrgb)"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "# Show full color image (optional)\n",
-    "fig = plt.figure(figsize=(9.5, 6))\n",
-    "ax = fig.add_subplot(1, 1, 1, projection=imwcs) # , sharex=True, sharey=True)\n",
-    "norm = ImageNormalize(stretch=SqrtStretch(), vmin=0, vmax=0.5)\n",
-    "plt.imshow(imrgb, origin='lower', norm=norm, interpolation='none', cmap='Greys')\n",
-    "plt.xlabel('Right Ascension')\n",
-    "plt.ylabel('Declination')"
    ]
   },
   {
